.provarCaches/00D5f000005vwGkEAI/objects/rstk__batchproctracker__c.object
<CustomObject>
    <fields>
        <fullName>rstk__batchproctracker_soapiprocessfinished__c</fullName>
        <label>SOAPI Processor Finish Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__batchproctracker_soapiprocessstarted__c</fullName>
        <label>SOAPI Processor Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__batchproctracker_sydataprocessfinished__c</fullName>
        <label>SYDATA Processor Finish Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__batchproctracker_sydataprocessstarted__c</fullName>
        <label>SYDATA Processor Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Periodic Batch Processor Tracker</label>
    <listViews>
        <fullName>rstk__Rstk</fullName>
        <columns>NAME</columns>
        <columns>rstk__batchproctracker_sydataprocessstarted__c</columns>
        <columns>rstk__batchproctracker_sydataprocessfinished__c</columns>
        <columns>rstk__batchproctracker_soapiprocessstarted__c</columns>
        <columns>rstk__batchproctracker_soapiprocessfinished__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Rstk</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periodic Batch Processor Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>